
option java_outer_classname="TaskCancelCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message TaskCancelCommand{
	optional string taskId = 1;
	optional bool cancelAll=  2;
}